@@ -1,3 +1,13 @@
+2007-03-11  Krzysztof Kowalczyk  <kkowalczyk@gmail.com>
+
+        Reviewed by Brady Edison.
+
+        Linux/gdk fix.
+
+        * loader/gdk/FrameLoaderClientGdk.cpp:
+        (WebCore::FrameLoaderClientGdk::shouldGoToHistoryItem): return true so
+        that FrameLoader:goBackOrForwards() works.
+
 2007-03-10  Geoffrey Garen  <ggaren@apple.com>
 
         Reviewed by Darin Adler.
